# ChiraEngine

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  README.md  annotated.html  annotated_dup.js  chira-editor.kdev4  classes.html  cmake_configure_macos.sh  custom.css  dir_04154a36a58df043faa310fa8943971c.html  dir_04154a36a58df043faa310fa8943971c.js  dir_093a22e1203ca9d4f33abf5692c836d3.html  dir_093a22e1203ca9d4f33abf5692c836d3.js  dir_0c5d6466e08d89b2c91842fdc3ffe2e0.html  dir_0c5d6466e08d89b2c91842fdc3ffe2e0.js  dir_0e5d686bc807cd645e961e19b7709d02.html  dir_0e5d686bc807cd645e961e19b7709d02.js  dir_15fc65921b8713fb556d30e882510e5d.html  dir_15fc65921b8713fb556d30e882510e5d.js  dir_20f29eb419757b342b4686e31cc9178d.html  dir_20f29eb419757b342b4686e31cc9178d.js  dir_28b9567156fcb352444bf1f93b61b4c5.html  dir_29e6a2e55a12f654c3ebe0705fe3f8e2.html  dir_29e6a2e55a12f654c3ebe0705fe3f8e2.js  dir_3be00b50676c1d3697e32e06ca0b0641.html  dir_3be00b50676c1d3697e32e06ca0b0641.js  dir_3cdaa9d52e3ec22a4dce3d088a143906.html  dir_3cdaa9d52e3ec22a4dce3d088a143906.js  dir_3d5a56dc2799aa781dc3d81aecbe8769.html  dir_3d5a56dc2799aa781dc3d81aecbe8769.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5a281bb44cee541aadb4b8da3a57a6a4.html  dir_5a4cbfacf50e7fd9e013cde666bbc704.html  dir_5a4cbfacf50e7fd9e013cde666bbc704.js  (+219 more)
editor/: CMakeLists.txt  Editor.cpp  Editor.h  EditorPlugin.cpp  EditorPlugin.h  EngineView.cpp  EngineView.h  InspectorPanel.cpp  InspectorPanel.h  Main.cpp  editor.cmake  editor.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
editor/Panels/: resourcebrowser.cpp  resourcebrowser.h  resourcebrowser.ui
editor/camera/: CMakeLists.txt  EditorCamera.cpp  EditorCamera.h
editor/docs/: pluginapi.md
editor/editorui/: CodeView.h  EngineView.cpp  EngineView.h  EntityPanel.cpp  EntityPanel.h  ResourceBrowser.cpp  ResourceBrowser.h  ToolsPanel.cpp
editor/entity/: CMakeLists.txt
editor/modeleditor/: CMakeLists.txt  ModelEditor.cpp  ModelEditor.h  ModelScene.cpp  ModelScene.h
editor/plugins/: README.md
editor/resource/: IconResource.cpp
editor/toolsmanager/: README.md  ToolsManager.cpp
editor/ui/: CMakeLists.txt  ControlsPanel.cpp  ControlsPanel.h  EditorPanel.cpp  EditorPanel.h  EntitySelectPanel.cpp  EntitySelectPanel.h  InspectorPanel.cpp  InspectorPanel.h  ModelViewerPanel.cpp  ModelViewerPanel.h  ScriptEditorPanel.cpp  ScriptEditorPanel.h  settings.cpp  settings.h  settingsUiWindowComponent.cpp  settingsUiWindowComponent.h
engine/math/: Axis.cpp  Axis.h  CMakeLists.txt  Color.cpp  Color.h  Graph.h  Matrix.h  Types.h  Vertex.cpp  Vertex.h
example/: CMakeLists.txt  demo.cpp
src/: CMakeLists.txt  engine.cpp  engine.h  input.cpp  input.h
src/components/: abstractEntity.cpp  componentManager.cpp  componentManager.h  positionComponent.h
src/config/: CMakeLists.txt  glVersion.h  imguiConfig.h  settings.cpp  settings.h
src/core/: CMakeLists.txt  engine.cpp  engine.h  glObject.cpp  glObject.h  helpers.h  virtualFileSystem.cpp  virtualFileSystem.h  world.cpp  world.h
src/entity/: CMakeLists.txt  entity.cpp  entity.h
src/event/: CMakeLists.txt  eventQueue.h  events.cpp  events.h
src/events/: eventQueue.cpp  eventQueue.h
src/hook/: discordRichPresence.cpp  discordRichPresence.h
src/i18n/: translationFileResource.cpp  translationFileResource.h  translationManager.cpp  translationManager.h
src/implementation/: CMakeLists.txt  discordRichPresence.cpp  discordRichPresence.h
src/input/: CMakeLists.txt  input.cpp  input.h  keybind.cpp  keybind.h  mousebind.cpp  mousebind.h
src/loader/: CMakeLists.txt  abstractFileSettingsLoader.h  abstractImage.h  abstractMeshLoader.h  abstractSettingsLoader.h  debugMeshLoader.cpp  debugMeshLoader.h  image.cpp  image.h  jsonSettingsLoader.cpp  jsonSettingsLoader.h  meshLoader.h  objMeshLoader.cpp  objMeshLoader.h  primitiveMeshLoader.cpp  primitiveMeshLoader.h
src/physics/: CMakeLists.txt  abstractPhysicsProvider.h  abstractPhysicsWorld.h  bulletColliderResource.h  bulletPhysicsProvider.cpp  bulletPhysicsProvider.h  bulletPhysicsWorld.cpp  bulletPhysicsWorld.h  bulletRigidBodyComponent.cpp  bulletRigidBodyComponent.h  physicsWorld.cpp  physicsWorld.h
src/render/: CMakeLists.txt  abstractCamera.h  abstractMaterial.cpp  abstractMaterial.h  camera.h  cubemapMaterial.cpp  cubemapMaterial.h  freecam.cpp  freecam.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  perspectiveCamera.cpp  perspectiveCamera.h  phongMaterial.cpp  phongMaterial.h  shader.cpp  shader.h  shaderFile.cpp  shaderFile.h  texture.cpp  texture.h  texture2d.cpp  texture2d.h  textureCubemap.cpp  textureCubemap.h  texturedMaterial.cpp  texturedMaterial.h  ubo.cpp  ubo.h  unlitMaterial.h  world.cpp  world.h
src/resource/: CMakeLists.txt  abstractMetaResource.h  abstractResource.cpp  abstractResource.h  abstractResourceProvider.h  filesystemResourceProvider.h  fontResource.cpp  fontResource.h  internetResourceProvider.cpp  internetResourceProvider.h  meshResource.cpp  meshResource.h  propertiesResource.h  resource.cpp  resource.h  resourceManager.cpp  resourceManager.h  shaderResource.cpp  shaderResource.h  stringResource.cpp  stringResource.h  textureResource.cpp  textureResource.h
src/script/: CMakeLists.txt  abstractScriptProvider.h  angelscriptHelpers.h  angelscriptHolder.cpp  angelscriptHolder.h  angelscriptProvider.cpp  angelscriptProvider.h
src/shader/: CMakeLists.txt  shader.cpp  shader.h  shaderBase.cpp  shaderBase.h  shaderFile.cpp  shaderFile.h
src/sound/: CMakeLists.txt  abstractSound.h  abstractSoundManager.h  alHelpers.cpp  alHelpers.h  alSoundManager.cpp  alSoundManager.h  oggFileSound.cpp  oggFileSound.h  oggFileStream.cpp  oggFileStream.h
src/ui/: CMakeLists.txt  abstractUiWindowComponent.cpp  abstractUiWindowComponent.h  console.cpp  console.h  extensibleUiWindowComponent.cpp  extensibleUiWindowComponent.h  markdown.h
src/utility/: CMakeLists.txt  abstractLogger.h  axis.h  compilable.h  counted_ptr.cpp  (+22 more)
tests/: CMakeLists.txt  TestHelpers.h  tests.cmake
(+2238 files in other folders)
